--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
     <title>Jennifer Valle</title>
   </head>
   
