--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon">
     <title>Jennifer Valle</title>
   </head>
